# django-training

./: README.md  auth_client.py  dump.rdb  pyproject.toml  pytest.ini
albums/: admin.py  forms.py  models.py  permissions.py  serializer.py  tasks.py  tests.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_artists.py  0003_alter_album_releasedate.py
albums/tests/: test_endpoints.py  test_serializers.py
artists/: admin.py  filters.py  models.py  serializer.py  tests.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_alter_artist_owner.py
artists/tests/: test_endpoints.py
authentication/: serializer.py  urls.py  views.py
authentication/tests/: test_endpoints.py
musicplatform/: RESULTS.md  celery.py  settings.py  urls.py
songs/: admin.py  models.py
songs/migrations/: 0001_initial.py  0002_alter_song_audio.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_endpoints.py
